fixed horizontal scroll issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -209,7 +209,8 @@ div.countdown {
 .auction-header {
   text-align: center;
   color: white;
-  padding: 30px 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   #auction-title {
     text-transform: uppercase;
